<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ponto-android="http://schemas.android.com/apk/res-auto" >


    <item
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/export">
        <menu>
            <item
                android:id="@+id/action_export_csv"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/export_to_csv"/>
            <item
                android:id="@+id/action_export_json"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/export_to_json"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_import"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/importer">
    </item>

</menu>